<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlayingWithNotifications_Test</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="notification">Send Notification</string>
    <string name="personal_notification">Personal Notification</string>
    <string name="big_picture_notification">Big Picture Notification</string>
    <string name="big_text_notification">Big Text Notification</string>
    <string name="multi_notifications">Multi Notifications</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="image">Image</string>
    <string name="notification_navigation">Notification Navigation</string>

</resources>
